Graph Editor, Channel, Toggle Channel Editability. Cannot reassign hotkey after removing it. #46691

Closed
opened 2015-11-04 11:03:50 +01:00 by Reiner Prokein · 5 comments

System Information
Operating system and graphics card

Win 7 64 Bit. Nvidia 760 GTX

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)
2.76

Short description of error

When removing the hotkey Tab from the menu item Toggle Channel Editability then i cannot reassign it. The RMB menu doesn't show the assign hotkey menu entry. But empty space.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Open Blender. Go to Animation layout. In the Graph Editor go to the Channel menu, choose Toggle Channel Editability. Right click at it. Remove the hotkey. Now right click again, and try to assign a new hotkey. Mission impossible. The RMB menu doesn't show the assign hotkey label.

What might be connected here is that the hotkey for this menu item Toggle Channel Editability in the Graph Editor points to the Animation Channel section in the input manager. And not at the Toggle Channel Editability input node in the Graph Editor section. This one seems to be a dead end. Without any connection. See image 3.

removeshortcut.jpg
removeshortcut3.jpg
removeshortcut2.jpg

**System Information** Operating system and graphics card Win 7 64 Bit. Nvidia 760 GTX **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) 2.76 **Short description of error** When removing the hotkey Tab from the menu item Toggle Channel Editability then i cannot reassign it. The RMB menu doesn't show the assign hotkey menu entry. But empty space. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Open Blender. Go to Animation layout. In the Graph Editor go to the Channel menu, choose Toggle Channel Editability. Right click at it. Remove the hotkey. Now right click again, and try to assign a new hotkey. Mission impossible. The RMB menu doesn't show the assign hotkey label. What might be connected here is that the hotkey for this menu item Toggle Channel Editability in the Graph Editor points to the Animation Channel section in the input manager. And not at the Toggle Channel Editability input node in the Graph Editor section. This one seems to be a dead end. Without any connection. See image 3. ![removeshortcut.jpg](https://archive.blender.org/developer/F251459/removeshortcut.jpg) ![removeshortcut3.jpg](https://archive.blender.org/developer/F251464/removeshortcut3.jpg) ![removeshortcut2.jpg](https://archive.blender.org/developer/F251462/removeshortcut2.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @tiles

Added subscriber: @tiles
Bastien Montagne self-assigned this 2015-11-05 12:56:33 +01:00

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by cb39a4171b

This issue was referenced by cb39a4171b6a052f13625688cbb5aed267356b50

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46691
No description provided.